# goma

./: CMakeLists.txt  README.md
data/sample_aachen/: README.md  cameras.txt  images.txt
examples/: CMakeLists.txt  goma_main.cc  image.cc  image.h  two_views.cc  two_views.h
goma/: CMakeLists.txt
goma/estimators/: homography_matrix.cc  homography_matrix.h  vanishing_point.cc  vanishing_point.h
goma/feature/: lsd.cc  lsd.h  types.h  vanishing_point.cc  vanishing_point.h
goma/geometry/: vanishing_point.cc  vanishing_point.h
goma/optim/: loransac.h
goma/scene/: image.h  line_segment.cc  line_segment.h  plane.h  scene.cc  scene.h  vanishing_point.h
goma/util/: loader.cc  loader.h  option_manager.cc  option_manager.h  reader.h  types.h
scripts/: line_segment_detection.sh  two_views.sh  vanishing_point_detection.sh
